# AirshipAce

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: atmopshere.c  atmosphere.c  atmosphere.h  constants.h  game.c  game.h  menu.c
src/testscripts/: lift.py
